[gd_scene load_steps=3 format=3 uid="uid://ctyd01bv020i8"]

[ext_resource type="Script" path="res://source/main-menu/Main.gd" id="1_2uj2d"]
[ext_resource type="PackedScene" uid="uid://dij5xr8swlfdx" path="res://source/main-menu/Background.tscn" id="2_depxw"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2uj2d")

[node name="Background" parent="." instance=ExtResource("2_depxw")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -97.0
offset_right = 55.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Play"

[node name="Button2" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Options"

[node name="Button3" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Credits"

[node name="Button4" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Quit"

[node name="Panel" type="Panel" parent="MarginContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Button3" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Button4" to="." method="_on_quit_button_pressed"]
